--- a/config/server.ini
+++ b/config/server.ini
@@ -1,7 +1,7 @@
 [server]
-host=https://gzzqa.cssiot.com.cn:8465/
-database_url=10.10.28.38
-role=tom
-password=12345
-database_name=csscloud
-is_run=是
+host=
+database_url=
+role=
+password=
+database_name=
+is_run=是1
